--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ x-neo4j-common-env: &neo4j-common-env
   NEO4J_apoc_import_file_use__neo4j__config: "true"
   NEO4J_dbms_memory_pagecache_size: "100M"
   NEO4J_dbms_memory_heap_initial__size: "100M"
-  NEO4J_causal__clustering_initial__discovery__members: neo4j-secondaly-core-1:5000,neo4j-secondaly-core-2:5000,mapi-edit-contents-neo4j-core:5000
+  NEO4J_causal__clustering_initial__discovery__members: neo4j-core-1:5000,neo4j-core-2:5000,neo4j-core-3:5000
 
 x-neo4j-core-env: &neo4j-core-env
   <<: *neo4j-common-env
@@ -41,33 +41,52 @@ x-neo4j-replica-env: &neo4j-replica-env
 
 services:
   # neo4j
-  neo4j-secondaly-core-1:
+  neo4j-core-1:
     image: neo4j:4.2-enterprise
     networks:
       - neo4j-cluster
+    ports:
+      - published: 7474
+        target: 7474
+      - published: 7687
+        target: 7687
     healthcheck: *neo4j-healthcheck
     environment:
       <<: *neo4j-core-env
-      NEO4J_causal__clustering_discovery__advertised__address: neo4j-secondaly-core-1:5000
+      NEO4J_causal__clustering_discovery__advertised__address: neo4j-core-1:5000
     volumes:
-      - neo4j-secondaly-core-1-data:/data
-      - neo4j-secondaly-core-1-logs:/logs
-      - neo4j-secondaly-core-1-import:/var/lib/neo4j/import
-      - neo4j-secondaly-core-1-plugins:/plugins
+      - neo4j-core-1-data:/data
+      - neo4j-core-1-logs:/logs
+      - neo4j-core-1-import:/var/lib/neo4j/import
+      - neo4j-core-1-plugins:/plugins
 
-  neo4j-secondaly-core-2:
+  neo4j-core-2:
     image: neo4j:4.2-enterprise
     networks:
       - neo4j-cluster
     healthcheck: *neo4j-healthcheck
     environment:
       <<: *neo4j-core-env
-      NEO4J_causal__clustering_discovery__advertised__address: neo4j-secondaly-core-2:5000
+      NEO4J_causal__clustering_discovery__advertised__address: neo4j-core-2:5000
     volumes:
-      - neo4j-secondaly-core-2-data:/data
-      - neo4j-secondaly-core-2-logs:/logs
-      - neo4j-secondaly-core-2-import:/var/lib/neo4j/import
-      - neo4j-secondaly-core-2-plugins:/plugins
+      - neo4j-core-2-data:/data
+      - neo4j-core-2-logs:/logs
+      - neo4j-core-2-import:/var/lib/neo4j/import
+      - neo4j-core-2-plugins:/plugins
+
+  neo4j-core-3:
+    image: neo4j:4.2-enterprise
+    networks:
+      - neo4j-cluster
+    healthcheck: *neo4j-healthcheck
+    environment:
+      <<: *neo4j-core-env
+      NEO4J_causal__clustering_discovery__advertised__address: neo4j-core-3:5000
+    volumes:
+      - neo4j-core-3-data:/data
+      - neo4j-core-3-logs:/logs
+      - neo4j-core-3-import:/var/lib/neo4j/import
+      - neo4j-core-3-plugins:/plugins
 
   # imageproxy
   imageproxy:
@@ -151,36 +170,22 @@ services:
     healthcheck: *neo4j-healthcheck
     environment:
       <<: *neo4j-replica-env
-      NEO4J_causal__clustering_discovery__advertised__address: mapi-read-contents-neo4j-replica:5000
 
   mapi-edit-contents-service:
     restart: always
-    image: ghcr.io/bo2kshelf/edit-contents-service:develop@sha256:7f8653677f40414c88a9ec183a11bb24c3c3fec8c325c582002cbda3458a607b
+    image: ghcr.io/bo2kshelf/edit-contents-service:develop@sha256:c977f55605365b4b60950bb729c66bcf3b9e168b4dcaf325c2adaada96bf5d6d
+    tty: true
     depends_on:
-      mapi-edit-contents-neo4j-core:
+      neo4j-core-1:
         condition: service_healthy
-    networks:
-      - mapi-edit-contents
-    environment:
-      PORT: 4000
-      NEO4J_URL: bolt://mapi-edit-contents-neo4j-core:7687
-      NEO4J_USERNAME: ${NEO4J_USERNAME}
-      NEO4J_PASSWORD: ${NEO4J_PASSWORD}
-
-  mapi-edit-contents-neo4j-core:
-    image: neo4j:4.2-enterprise
     networks:
       - neo4j-cluster
       - mapi-edit-contents
-    healthcheck: *neo4j-healthcheck
     environment:
-      <<: *neo4j-core-env
-      NEO4J_causal__clustering_discovery__advertised__address: mapi-edit-contents-neo4j-core:5000
-    volumes:
-      - mapi-edit-contents-neo4j-core-data:/data
-      - mapi-edit-contents-neo4j-core-logs:/logs
-      - mapi-edit-contents-neo4j-core-import:/var/lib/neo4j/import
-      - mapi-edit-contents-neo4j-core-plugins:/plugins
+      PORT: 4000
+      NEO4J_URL: neo4j://neo4j-core-1:7687
+      NEO4J_USERNAME: ${NEO4J_USERNAME}
+      NEO4J_PASSWORD: ${NEO4J_PASSWORD}
 
   mapi-bookcover-service:
     restart: always
@@ -285,7 +290,6 @@ services:
     healthcheck: *neo4j-healthcheck
     environment:
       <<: *neo4j-replica-env
-      NEO4J_causal__clustering_discovery__advertised__address: papi-read-contents-neo4j-replica:5000
 
   papi-read-records-service:
     restart: always
@@ -341,20 +345,21 @@ volumes:
   # imageproxy
   imageproxy-redis-data:
   # neo4j
-  neo4j-secondaly-core-1-data:
-  neo4j-secondaly-core-1-logs:
-  neo4j-secondaly-core-1-import:
-  neo4j-secondaly-core-1-plugins:
+  neo4j-core-1-data:
+  neo4j-core-1-logs:
+  neo4j-core-1-import:
+  neo4j-core-1-plugins:
 
-  neo4j-secondaly-core-2-data:
-  neo4j-secondaly-core-2-logs:
-  neo4j-secondaly-core-2-import:
-  neo4j-secondaly-core-2-plugins:
+  neo4j-core-2-data:
+  neo4j-core-2-logs:
+  neo4j-core-2-import:
+  neo4j-core-2-plugins:
+
+  neo4j-core-3-data:
+  neo4j-core-3-logs:
+  neo4j-core-3-import:
+  neo4j-core-3-plugins:
   # management
-  mapi-edit-contents-neo4j-core-data:
-  mapi-edit-contents-neo4j-core-logs:
-  mapi-edit-contents-neo4j-core-import:
-  mapi-edit-contents-neo4j-core-plugins:
   mapi-bookcover-service-redis-data:
   # public
   papi-read-users-mysql-data:
